--- a/que/src/main/resources/templates/fragments.html
+++ b/que/src/main/resources/templates/fragments.html
@@ -26,35 +26,46 @@
         <h1 class="mx-auto mt-5">Tickets</h1>
         <div class="card-body">
             <a class="btn btn-success mt-2" th:href="@{'/tickets/create'}" th:text="Create"></a>
-            <div  th:replace="fragments.html :: tableBody(${tickets}, ${totalPages}, ${currentPage})"  id="lenta">
-            <table class="table table-striped table-hover mt-5">
+            <div th:fragment="tableBody(tickets,totalPages,currentPage)" id="lenta">
+            <table  class="table table-striped table-hover mt-5">
                 <thead>
                 <tr class="table-info">
                     <th>Nr.</th>
+
                     <th>ticket number</th>
                     <th>Time Left</th>
+
                 </tr>
                 </thead>
-                <tbody id="show">
-                <tr >
-                </tr>
+                <tbody >
+
+                <tr th:each="ticket :${tickets}">
+                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:href="@{/tickets/{id} (id=${ticket.getId()})}"
+                        th:text="${tickets.indexOf(ticket)}+1"></td>
+                    <td  th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:href="@{/tickets/{id} (id=${ticket.getId()})}"
+                         th:text="${tickets.indexOf(ticket)}+1"></td>
+
+                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:text="${ticket.getSerialNumber()}"></td>
+                    <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:text="${ticket.getSerialNumber()}"></td>
+
+                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
+                        <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
+                    </td>
+                    <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
+                        <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
+                    </td>
+              </tr>
+
                 </tbody>
             </table>
             </div>
             <b th:text="${#execInfo.now.getTime()}"></b>
 
         </div>
-
-
-     <!--        pageanation -->
-
-
-
-
 <!--        <div th:if="${totalPages>1}">-->
 <!--            <div class="row col-sm-10">-->
 
-<!--                <div class="col-sm-1">-->
+<!--                <div class="col-sm-3">-->
 <!--                     <span th:each="i: ${#numbers.sequence(1,totalPages)}">-->
 
 <!--                         <a th:if="${currentPage !=i}" th:href="@{'/tickets/' +${i}}" th:text="${i}"></a>-->
@@ -73,30 +84,11 @@
 <!--                </div>-->
 <!--            </div>-->
 <!--        </div>-->
-<!--        -->
-
-
-
     </div>
 </div>
-
+<!--/*@thymesVar id="totalPages" type=""*/-->
+<!--<h1 th:text="${totalPages}"></h1>-->
 
 </body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js">
 
-</script>
-
-<script>
-
-    $(document).ready(
-        function () {
-            setInterval(function () {
-
-                $('body').load('fragments');
-            }, 5000);
-        });
-</script>
 </html>
-
-
-
