--- a/que/src/main/resources/templates/fragments.html
+++ b/que/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -14,7 +14,8 @@ xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">TIcket System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -27,30 +28,36 @@ xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/tickets/create">Book Ticket</a>
-            </li> <li class="nav-item">
-            <a class="nav-link" href="/specialists/">Login</a>
-        </li>
+            </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/specialists" tabindex="-1">Specialists</a>
+            </li>
+            <li sec:authorize="isAuthenticated()">
+                <a class="nav-link" href="/specialists" tabindex="-1" sec:authentication="name">Specialists</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/specialists" tabindex="-1">
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" value="Logout"/>
+
+
+                    </form>
+                </a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div sec:authorize="isAuthenticated()">
-    Welcome <span sec:authentication="name">Username</span>
-</div>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Logout"/>
 
-
-</form>
 <div class="container mt-5">
     <form class="form-group">
         <div class="input-group mb-3">
-<!--            <div class="input-group-prepend">-->
-<!--                <button class="btn btn-outline-secondary" type="submit">Paieska</button>-->
-<!--            </div>-->
+            <!--            <div class="input-group-prepend">-->
+            <!--                <button class="btn btn-outline-secondary" type="submit">Paieska</button>-->
+            <!--            </div>-->
 
         </div>
 
@@ -58,72 +65,78 @@ xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
     <div class="card">
         <h1 class="mx-auto mt-5">Tickets</h1>
         <div class="card-body">
-            <a class="btn btn-success mt-2" th:href="@{'/tickets/create'}" th:text="Create"></a>
+
             <div th:fragment="tableBody(tickets,totalPages,currentPage)" id="lenta">
-            <table  class="table table-striped table-hover mt-5">
-                <thead>
-                <tr class="table-info">
-                    <th>Nr.</th>
+                <table class="table table-striped table-hover mt-5">
+                    <thead>
+                    <tr class="table-info">
+                        <th>Nr.</th>
 
-                    <th>ticket number</th>
-                    <th>Time Left</th>
+                        <th>ticket number</th>
+                        <th>Time Left</th>
 
-                </tr>
-                </thead>
-                <tbody >
+                    </tr>
+                    </thead>
+                    <tbody>
 
-                <tr th:each="ticket :${tickets}">
-                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:href="@{/tickets/{id} (id=${ticket.getId()})}"
-                        th:text="${tickets.indexOf(ticket)}+1"></td>
-                    <td  th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:href="@{/tickets/{id} (id=${ticket.getId()})}"
-                         th:text="${tickets.indexOf(ticket)}+1"></td>
+                    <tr th:each="ticket :${tickets}">
+                        <td th:if="${ticket.getTicketState().toString().equals('SERVING') }"
+                            style="background-color: aqua" th:href="@{/tickets/{id} (id=${ticket.getId()})}"
+                            th:text="${tickets.indexOf(ticket)}+1"></td>
+                        <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }"
+                            th:href="@{/tickets/{id} (id=${ticket.getId()})}"
+                            th:text="${tickets.indexOf(ticket)}+1"></td>
 
-                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:text="${ticket.getSerialNumber()}"></td>
-                    <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:text="${ticket.getSerialNumber()}"></td>
+                        <td th:if="${ticket.getTicketState().toString().equals('SERVING') }"
+                            style="background-color: aqua" th:text="${ticket.getSerialNumber()}"></td>
+                        <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }"
+                            th:text="${ticket.getSerialNumber()}"></td>
 
-                    <td th:if="${ticket.getTicketState().toString().equals('SERVING') }" style="background-color: aqua" th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
-                        <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
-                    </td>
-                    <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }" th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
-                        <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
-                    </td>
-              </tr>
+                        <td th:if="${ticket.getTicketState().toString().equals('SERVING') }"
+                            style="background-color: aqua"
+                            th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
+                            <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
+                        </td>
+                        <td th:unless="${ticket.getTicketState().toString().equals('SERVING') }"
+                            th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
+                            <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
+                        </td>
+                    </tr>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
             </div>
             <b th:text="${#execInfo.now.getTime()}"></b>
 
         </div>
-<!--        <div th:if="${totalPages>1}">-->
-<!--            <div class="row col-sm-10">-->
+        <!--        <div th:if="${totalPages>1}">-->
+        <!--            <div class="row col-sm-10">-->
 
-<!--                <div class="col-sm-3">-->
-<!--                     <span th:each="i: ${#numbers.sequence(1,totalPages)}">-->
+        <!--                <div class="col-sm-3">-->
+        <!--                     <span th:each="i: ${#numbers.sequence(1,totalPages)}">-->
 
-<!--                         <a th:if="${currentPage !=i}" th:href="@{'/tickets/' +${i}}" th:text="${i}"></a>-->
-<!--                         <span th:unless="${currentPage !=i}" th:text="${i}"></span> &nbsp;&nbsp;-->
-<!--                     </span>-->
-<!--                </div>-->
-<!--                <div class="col-sm-1">-->
-<!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${currentPage+1}}" th:text="Next"></a>-->
-<!--                    <span th:unless="${currentPage <totalPages}" th:text="Next"></span>-->
+        <!--                         <a th:if="${currentPage !=i}" th:href="@{'/tickets/' +${i}}" th:text="${i}"></a>-->
+        <!--                         <span th:unless="${currentPage !=i}" th:text="${i}"></span> &nbsp;&nbsp;-->
+        <!--                     </span>-->
+        <!--                </div>-->
+        <!--                <div class="col-sm-1">-->
+        <!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${currentPage+1}}" th:text="Next"></a>-->
+        <!--                    <span th:unless="${currentPage <totalPages}" th:text="Next"></span>-->
 
-<!--                </div>-->
-<!--                <div class="col-sm-1">-->
-<!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${totalPages}}" th:text="Last"></a>-->
-<!--                    <span th:unless="${currentPage <totalPages}" th:text="Last"></span>-->
+        <!--                </div>-->
+        <!--                <div class="col-sm-1">-->
+        <!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${totalPages}}" th:text="Last"></a>-->
+        <!--                    <span th:unless="${currentPage <totalPages}" th:text="Last"></span>-->
 
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </div>
 </div>
 <!--/*@thymesVar id="totalPages" type=""*/-->
 <!--<h1 th:text="${totalPages}"></h1>-->
 
 </body>
-
 
 
 </html>
