--- a/que/src/main/resources/templates/customerPages/find.html
+++ b/que/src/main/resources/templates/customerPages/find.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleafe.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
-    <title>Ticket System</title>
+    <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
-
 </head>
-<body>
 
+<body>
 
 <nav th:fragment="nav()" class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -45,13 +45,27 @@
         </ul>
     </div>
 </nav>
-<div class="card">
-
+<div class="card row col-6 ml-auto mr-auto mt-5">
+    <h1 style="text-align: center">Find Ticket</h1>
     <div class="card-body">
 
-   <h1 style="text-align: center">Welcome To Ticket System</h1>
-        <b th:text="${#execInfo.now.getTime()}"></b>
+        <h2 style="text-align: center; color: firebrick" th:text="${message}"></h2>
 
+        <form th:object="${ticket}" th:action="@{/ticket/find}" method="get" class="form-group">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"
+                       name="filter" th:value="${filter}">
+            </div>
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </div>
+
+        </form>
     </div>
+    <b th:text="${#execInfo.now.getTime()}"></b>
+</div>
+
+
+</div>
 </body>
 </html>
