--- a/que/src/main/resources/templates/customerPages/index.html
+++ b/que/src/main/resources/templates/customerPages/index.html
@@ -10,132 +10,19 @@
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 </head>
+
 <body>
-<meta charset="UTF-8">
-<title>Title</title>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">TIcket System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets">Display Screen</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets/create">Book Ticket</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">Specialists</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/specialists" tabindex="-1" sec:authentication="name">Specialists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout"/>
 
+<nav  th:insert ="customerPages/find.html :: nav()"></nav>
+<div class="card">
+    <h1 style="text-align: center">Welcome To Ticket System</h1>
+    <div class="card-body">
 
-                    </form>
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
-
-<div class="container mt-5">
-    <form class="form-group">
-        <div class="input-group mb-3">
-            <!--            <div class="input-group-prepend">-->
-            <!--                <button class="btn btn-outline-secondary" type="submit">Paieska</button>-->
-            <!--            </div>-->
-
-        </div>
-
-    </form>
-    <div class="card">
-        <h1 class="mx-auto mt-5">Tickets</h1>
-        <div class="card-body">
-
-            <div th:replace="fragments.html :: tableBody(${tickets}, ${totalPages}, ${currentPage})" id="lenta">
-                <table class="table table-striped table-hover mt-5">
-                    <thead>
-                    <tr class="table-info">
-                        <th>Nr.</th>
-                        <th>ticket number</th>
-                        <th>Time Left</th>
-                    </tr>
-                    </thead>
-                    <tbody id="show">
-                    <tr>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <b th:text="${#execInfo.now.getTime()}"></b>
-
-        </div>
-
-
-        <!--        pageanation -->
-
-
-        <!--        <div th:if="${totalPages>1}">-->
-        <!--            <div class="row col-sm-10">-->
-
-        <!--                <div class="col-sm-1">-->
-        <!--                     <span th:each="i: ${#numbers.sequence(1,totalPages)}">-->
-
-        <!--                         <a th:if="${currentPage !=i}" th:href="@{'/tickets/' +${i}}" th:text="${i}"></a>-->
-        <!--                         <span th:unless="${currentPage !=i}" th:text="${i}"></span> &nbsp;&nbsp;-->
-        <!--                     </span>-->
-        <!--                </div>-->
-        <!--                <div class="col-sm-1">-->
-        <!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${currentPage+1}}" th:text="Next"></a>-->
-        <!--                    <span th:unless="${currentPage <totalPages}" th:text="Next"></span>-->
-
-        <!--                </div>-->
-        <!--                <div class="col-sm-1">-->
-        <!--                    <a th:if="${currentPage <totalPages}" th:href="@{'/tickets/' +${totalPages}}" th:text="Last"></a>-->
-        <!--                    <span th:unless="${currentPage <totalPages}" th:text="Last"></span>-->
-
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--        -->
-
+      <h2 style="text-align: center; color: firebrick" th:text="${message}"></h2>
 
     </div>
+    <b th:text="${#execInfo.now.getTime()}"></b>
+
 </div>
-
-
 </body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js">
-
-</script>
-
-<script>
-
-    $(document).ready(
-        function () {
-            setInterval(function () {
-
-                $('body').load('fragments');
-            }, 5000);
-        });
-</script>
 </html>
-
-
-
