--- a/que/src/main/resources/templates/customerPages/ticket.html
+++ b/que/src/main/resources/templates/customerPages/ticket.html
@@ -14,46 +14,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">TIcket System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets">Display Screen</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets/create">Book Ticket</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">Specialists</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/specialists" tabindex="-1" sec:authentication="name">Specialists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout"/>
+<nav  th:insert ="customerPages/find.html :: nav()"></nav>
 
-
-                    </form>
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<div class="card col-5 ml-auto mr-auto"  >
+<div class="card col-6 ml-auto mr-auto mt-5"  >
     <h1 class="mx-auto mt-5">Your Ticket Details</h1>
     <div class="card-body">
 
@@ -64,6 +27,7 @@
                     <th>Your Number in The Que</th>
                     <th>Ticket Number</th>
                     <th>Time Left</th>
+                    <th>Cancel</th>
 
 
                 </tr>
@@ -79,6 +43,12 @@
                     <td style="background-color: aqua"
                         th:with="timeLeft=(${ticket.getStartTime().getTime()} - ${#execInfo.now.getTime().getTime()} )/(1000*60)">
                         <p th:text="${#numbers.formatDecimal(timeLeft,0,0)} +' min'  "></p>
+                    </td>
+                    <td style="background-color: aqua">
+                    <form  th:action="@{/tickets/delete}" method="post">
+                        <input type="hidden" name="id" th:value="${ticket.id}"/>
+                        <button type="submit" value="Delete" class="btn btn-danger">Cancel</button>
+                    </form>
                     </td>
                 </tr>
 
