--- a/que/src/main/resources/templates/error/index.html
+++ b/que/src/main/resources/templates/error/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Ticket System</title>
@@ -12,12 +12,9 @@
 </head>
 <body>
 
-
-<nav th:fragment="nav()" class="navbar navbar-expand-lg navbar-light bg-light">
-
-    <a class="navbar-brand" href="/">Ticket System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">TIcket System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,17 +27,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/tickets/create">Book Ticket</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="/ticket/find">Find Ticket</a>
-            </li>
-
-
-            <li class="nav-item">
+            </li> <li class="nav-item">
                 <a class="nav-link" href="/specialists/">Login</a>
             </li>
-
 
         </ul>
     </div>
@@ -49,7 +38,7 @@
 
     <div class="card-body">
 
-   <h1 style="text-align: center">Welcome To Ticket System</h1>
+   <h1 style="text-align: center">404</h1>
         <b th:text="${#execInfo.now.getTime()}"></b>
 
     </div>
