--- a/que/src/main/resources/templates/fragments.html
+++ b/que/src/main/resources/templates/fragments.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">TIcket System</a>
+<nav th:fragment="nav()" class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <a class="navbar-brand" href="/">Ticket System</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,39 +30,33 @@
             <li class="nav-item">
                 <a class="nav-link" href="/tickets/create">Book Ticket</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/ticket/find">Find Ticket</a>
+            </li>
+
+
             <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">Specialists</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/specialists" tabindex="-1" sec:authentication="name">Specialists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout"/>
 
-
-                    </form>
-                </a>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
             </li>
+
+<!--            <li class="ml-auto">-->
+<!--                <form th:action="@{/logout}" method="post">-->
+<!--                    <input type="submit" value="Logout"/>-->
+<!--                </form>-->
+<!--            </li>-->
+
         </ul>
     </div>
 </nav>
 
 
 <div class="container mt-5">
-    <form class="form-group">
-        <div class="input-group mb-3">
-            <!--            <div class="input-group-prepend">-->
-            <!--                <button class="btn btn-outline-secondary" type="submit">Paieska</button>-->
-            <!--            </div>-->
 
-        </div>
-
-    </form>
     <div class="card">
         <h1 class="mx-auto mt-5">Tickets</h1>
         <div class="card-body">
