--- a/que/src/main/resources/templates/service/specialist.html
+++ b/que/src/main/resources/templates/service/specialist.html
@@ -11,43 +11,7 @@
 
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">TIcket System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets">Display Screen</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tickets/create">Book Ticket</a>
-            </li> <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-        </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">Specialists</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/specialists" tabindex="-1" sec:authentication="name">Specialists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/specialists" tabindex="-1">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout"/>
-
-
-                    </form>
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<nav  th:insert ="fragments.html :: nav()"></nav>
 
 <div class="container mt-5">
     <form class="form-group">
@@ -58,7 +22,7 @@
 
     </form>
     <div class="card">
-        <h1 class="mx-auto mt-5">Specialists</h1>
+        <h1 class="mx-auto mt-5">Tickets to Serve</h1>
         <div class="card-body">
                         <h1 th:text="${specialist.getUserName()}"></h1>
             <table class="table table-striped table-hover mt-5">
@@ -85,6 +49,8 @@
                     <td><a th:text="Start"></a></td>
                     <td><a th:text="End"></a></td>
                     <td><a th:text="Cancel"></a></td>
+
+
 
 
                 </tr>
